--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         }
     ],
     "require": {
-        "nikic/fast-route": "^1.3"
+        "nikic/fast-route": "^1.3",
+        "phpmailer/phpmailer": "^6.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
